[gd_scene load_steps=11 format=3 uid="uid://dmfx08ljuq03g"]

[ext_resource type="Script" path="res://Scenes/kami_scenes/kami_middle.gd" id="1_n1man"]
[ext_resource type="Texture2D" uid="uid://c3f5gk1idmvk8" path="res://Graphics/GUI/News_Anchor/News Anchor rework/news_guy3.png" id="4_erx58"]
[ext_resource type="Texture2D" uid="uid://bqchpw4ccsj6m" path="res://Graphics/News Anchor scenes/Demonstration/Demonstration3.png" id="4_tmvov"]
[ext_resource type="Texture2D" uid="uid://ckmlvix6lsqug" path="res://Graphics/News Anchor scenes/Demonstration/Demonstration4.png" id="5_j1xu8"]
[ext_resource type="Texture2D" uid="uid://bb6qeosbgcixl" path="res://Graphics/GUI/News_Anchor/News Anchor rework/news_guy4.png" id="5_kbuky"]
[ext_resource type="Texture2D" uid="uid://qp41340bxwj7" path="res://Scenes/kami_scenes/kami_assetss/menu_art_background_2.png" id="7_eaci3"]
[ext_resource type="Texture2D" uid="uid://bmlebe1c6ap3h" path="res://Scenes/kami_scenes/kami_assetss/menu_art_background_bottom.png" id="8_m7uiq"]
[ext_resource type="PackedScene" uid="uid://b7lubwtb4ys3c" path="res://Scenes/kami_scenes/skip.tscn" id="9_mjh2a"]
[ext_resource type="PackedScene" uid="uid://ckq1h803qp0h8" path="res://Scenes/kami_scenes/kami_cutscene.tscn" id="10_axgat"]
[ext_resource type="Texture2D" uid="uid://iq8k84jie0bx" path="res://Graphics/Menu/menu_art.png" id="11_f0iap"]

[node name="middle_exposition" type="Node2D"]
script = ExtResource("1_n1man")
imgs = Array[Texture2D]([ExtResource("4_erx58"), ExtResource("5_kbuky"), ExtResource("4_tmvov"), ExtResource("5_j1xu8")])
lines = Array[String](["Breaking News! Wonderful Breaking News! This just in, after getting from reports all around the city and conducting and interview with the Mr. Dupli himself, we found that he is not in fact as bad as he seems! This whole ordeal is just a big misunderstanding and after talking with him and countless other personally, we've found that they uncovered a truth about Culmin and his evil system that we were all to blind to see before!", "Culmin has been caught supporting all these businesses he said were to develop the country when they were in fact laundering fronts to earn him and his higher ups more Money!! He even had spies in the ranks of Clap of Revolution News to alter our data so that he could keep up his own image while stealing money from the whole city! But do not panic! for the hero Dupli has been concocting a solution to all of our problems. ", " While we unknowingly threw insult and hatred towards him and his supporters, they were creating a new system for our government to follow which will make everyone equal so that no one need live under the shadow of an upper class! There will only be the government and the people, ", "True harmony. However, because we were tricked once, we wanted to take precautions to make sure it doesn't happen again. So, even though I am almost certain that Mr. Dupli is right, we will remain a neutral platform for all to speak across. For now"])
number_of_slides = 4

[node name="Menu_art_1" type="TextureRect" parent="."]
offset_left = 152.8
offset_top = -262.0
offset_right = 1036.8
offset_bottom = 254.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(442, 258)
texture = ExtResource("7_eaci3")

[node name="Menu_art_2" type="TextureRect" parent="."]
offset_left = 152.8
offset_top = 399.0
offset_right = 1036.8
offset_bottom = 607.0
scale = Vector2(1.4, 1.4)
pivot_offset = Vector2(442, 104)
texture = ExtResource("8_m7uiq")

[node name="Skip" parent="." instance=ExtResource("9_mjh2a")]
offset_left = 1104.0
offset_right = 1145.0

[node name="cut_scene" parent="." instance=ExtResource("10_axgat")]
visible = false
offset_left = 357.0
offset_top = 197.0
offset_right = 357.0
offset_bottom = 197.0
img = ExtResource("11_f0iap")
music = false

[node name="scenesss" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="skip" from="Skip" to="." method="_on_skip_skip"]
[connection signal="next" from="cut_scene" to="." method="_on_cut_scene_next"]
